# local-web-services

./: .dockerignore  .githooks-setup.md  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
01/bfe6e6dfd7/: metadata.json
03/0a83a7fe4f/: metadata.json
03/d2ca9ee612/: metadata.json
04/612d5e5519/: metadata.json
05/83c5748946/: metadata.json
06/023fc4436b/: metadata.json
06/4cd658ab60/: metadata.json
0a/507822fc97/: metadata.json
0c/759b4d7c4e/: metadata.json
0d/23ec7d0c34/: metadata.json
0e/b8206d0312/: metadata.json
0e/dfc9f1eaa6/: metadata.json
0f/efc1370e0c/: metadata.json
10/700bc3023c/: metadata.json
10/7ff1cefb2b/: metadata.json
10/a2bd7ed376/: metadata.json
10/b96fcacddc/: metadata.json
10/d86c5ce5f9/: metadata.json
13/c17af0e7e1/: metadata.json
14/3633a9ddde/: metadata.json
14/f52522cbb1/: metadata.json
15/a2bfbf5828/: metadata.json
15/ac86f40f5a/: metadata.json
15/b423d77bc8/: metadata.json
18/8fcf61ebd4/: metadata.json
1a/0daa201238/: metadata.json
1a/219c43b054/: metadata.json
1a/4f77765b9c/: metadata.json
1a/d80018a681/: metadata.json
1b/29a77e7337/: metadata.json
1d/4189474dd8/: metadata.json
1d/dd7899db43/: metadata.json
1f/8b400eb1c7/: metadata.json
20/c764ae92ce/: metadata.json
21/3271741541/: metadata.json
21/86379e58c0/: metadata.json
21/ced64f1b9f/: metadata.json
22/d6c750af11/: metadata.json
23/b754540344/: metadata.json
23/dd9f21fc46/: metadata.json
24/bf0c6fb125/: metadata.json
24/d8009c8e49/: metadata.json
24/fce45d3f35/: metadata.json
25/94803324d8/: metadata.json
26/aace40b672/: metadata.json
26/fcf35decbf/: metadata.json
27/e96fb53dd8/: metadata.json
28/0194e1ffd9/: metadata.json
28/b95695ede8/: metadata.json
28/c77274ad7a/: metadata.json
2b/0e38f82264/: metadata.json
2b/2ccb93c699/: metadata.json
2c/16e8dba93b/: metadata.json
2f/b37e4b9cd8/: metadata.json
34/3651327e2b/: metadata.json
34/ad2a36f111/: metadata.json
36/734a455858/: metadata.json
39/bd98a70c32/: metadata.json
39/f0a2531510/: metadata.json
3a/11935844d4/: metadata.json
3a/120167a10a/: metadata.json
3a/aaecf22615/: metadata.json
3a/ce5f4c8ea3/: metadata.json
3a/e8abd9bc21/: metadata.json
3a/f3f17e2825/: metadata.json
3c/919ef9f0d1/: metadata.json
3d/c6aebda9c5/: metadata.json
3d/f54a24dbd2/: metadata.json
3e/88c3ff02e3/: metadata.json
41/32e0516932/: metadata.json
42/9895c1a089/: metadata.json
43/6afc2e9d55/: metadata.json
45/76eb387608/: metadata.json
45/91f3b82c65/: metadata.json
46/2b44c7e277/: metadata.json
46/9cf64e7fc9/: metadata.json
46/d577359fd1/: metadata.json
48/598911694b/: metadata.json
48/6f2a40b2fa/: metadata.json
49/109809c2bd/: metadata.json
4a/247859ddf1/: metadata.json
4e/9045bf30b0/: metadata.json
4e/f933fdbde4/: metadata.json
50/409da9b103/: metadata.json
52/374402fd75/: metadata.json
52/7a3f937be6/: metadata.json
55/96120edf76/: metadata.json
55/a4b8a93bb6/: metadata.json
55/d6b13deb46/: metadata.json
56/5d8d2ebe9e/: metadata.json
58/fdebe22b11/: metadata.json
59/600acb1403/: metadata.json
59/73b16de0fc/: metadata.json
5a/86b8fd85d3/: metadata.json
5b/792f349b61/: metadata.json
5b/98702c634f/: metadata.json
5b/f0474104d9/: metadata.json
5c/604daa77a3/: metadata.json
5e/4de3fecef4/: metadata.json
5e/c94825cb08/: metadata.json
61/662e6a363e/: metadata.json
65/e622370985/: metadata.json
66/57be8d78c3/: metadata.json
66/913767d8f3/: metadata.json
68/bce663c05a/: metadata.json
69/c9d8bd2ca1/: metadata.json
6a/196648fded/: metadata.json
6a/e9f7545c8a/: metadata.json
6e/7f22f2b6c9/: metadata.json
70/33a1494768/: metadata.json
70/4873b05af4/: metadata.json
72/42325c618c/: metadata.json
72/e50bd4a4a8/: metadata.json
75/b8894fef71/: metadata.json
76/f5c676980a/: metadata.json
77/960fdab623/: metadata.json
77/a7d216a73f/: metadata.json
79/f8f258cb26/: metadata.json
7a/1fa996dee2/: metadata.json
7b/a720b22656/: metadata.json
7d/641edeebd6/: metadata.json
7e/259fce5088/: metadata.json
7e/8a4ced7b92/: metadata.json
7f/6632c22310/: metadata.json
81/f7a2c05556/: metadata.json
83/0c9ee4485a/: metadata.json
83/376858500e/: metadata.json
84/80aa85be6c/: metadata.json
84/9af44a4b21/: metadata.json
84/ea0e874686/: metadata.json
85/6f7d8efd10/: metadata.json
86/8352f4bea4/: metadata.json
87/1dfa96db18/: metadata.json
8b/8b7dc66b92/: metadata.json
8e/e373c6da66/: metadata.json
8f/932e12d343/: metadata.json
91/83ae063d55/: metadata.json
91/89fc51f72a/: metadata.json
91/bbee703977/: metadata.json
92/5e0afcfb31/: metadata.json
94/0af930dd3f/: metadata.json
94/235c964c82/: metadata.json
95/9df4e7c193/: metadata.json
97/b3c245e35e/: metadata.json
97/df575a76c2/: metadata.json
98/84dac56fbf/: metadata.json
9a/08ac5495e6/: metadata.json
9a/8f57a479ae/: metadata.json
9b/0d1cd45819/: metadata.json
9b/94628420db/: metadata.json
9b/ee32d76b1c/: metadata.json
9c/ad8a4a4d52/: metadata.json
9d/1ab6ac9d4c/: metadata.json
9d/a896acd2fd/: metadata.json
9d/f94c5a3c92/: metadata.json
a0/8cd11e9434/: metadata.json
a2/00dbfc3092/: metadata.json
a2/0cf8ebeba7/: metadata.json
a2/4272fc72e1/: metadata.json
a3/39effc218b/: metadata.json
a3/d4c4cfebef/: metadata.json
a4/1e80de862b/: metadata.json
a4/fe5cc16cdc/: metadata.json
a6/4a15874ebb/: metadata.json
a6/51b6b55bbd/: metadata.json
a6/c11e308b3c/: metadata.json
a6/c8bf64f0dc/: metadata.json
a7/db5efeee3c/: metadata.json
a8/e9072e0507/: metadata.json
a9/8a7eba6c1c/: metadata.json
aa/f6277c5747/: metadata.json
ab/1a7a41ebda/: metadata.json
ab/998900002f/: metadata.json
ab/cbef8c5a29/: metadata.json
ac/194a32647b/: metadata.json
contributing/: ARCHITECTURE.md  LINTING.md
docs/: implementation-tasks.md  ldk_concept.docx  ldk_developer_experience.docx  ldk_project_plan.docx
openspec/: project.md
(+3095 files in other folders)
