[project]
name = "local-web-services"
version = "0.2.1"
description = "Local Development Kit - Run AWS CDK applications locally"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "watchdog>=4.0.0",
    "aiosqlite>=0.20.0",
    "croniter>=2.0.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.9",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
ldk = "ldk.cli.main:app"
lws = "ldk.cli.lws:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ldk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "radon>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "radon>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["ldk"]

[tool.ruff.lint.per-file-ignores]
"src/ldk/api/gui.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10
